test/corpus/san.txt
================================================================================
Pawn move
================================================================================

[Event "?"]

2.c4 e6
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Pawn move with capture
================================================================================

[Event "?"]

2.dxc4 e6
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Pawn move with implicit capture
================================================================================

[Event "?"]

2.dc4 e6
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Rook move
================================================================================

[Event "?"]

18. Rf6 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Knight move
================================================================================

[Event "?"]

18. Nf6 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Bishop move
================================================================================

[Event "?"]

18. Bf6 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Queen move
================================================================================

[Event "?"]

18. Qf6 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
King move
================================================================================

[Event "?"]

18. Kf6 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Castle
================================================================================

[Event "?"]

18. O-O c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Castle, queenside
================================================================================

[Event "?"]

18. O-O-O c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Castle, queenside, irregular
================================================================================

[Event "?"]

18. 0-0—0 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Promotion
================================================================================

[Event "?"]

1. g8=Q e1=N
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Promotion, irregular
================================================================================

[Event "?"]

1. g8Q e1N
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Capture
================================================================================

[Event "?"]

18. Nxf6 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Capture, irregular 1
================================================================================

[Event "?"]

18. NXf6 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Capture, irregular 2
================================================================================

[Event "?"]

18. N:f6 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Check
================================================================================

[Event "?"]

18. Nf6+ Bxf6
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move
        (check_or_mate_condition))
      (san_move))
    (result_code)))

================================================================================
Checkmate
================================================================================

[Event "?"]

18. Nf6#
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move
        (check_or_mate_condition)))
    (result_code)))

================================================================================
Checkmate, irregular
================================================================================

[Event "?"]

18. Nf6++
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move
        (check_or_mate_condition)))
    (result_code)))

================================================================================
Capture with check
================================================================================

[Event "?"]

18. Nxf6+ Bxf6
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move
        (check_or_mate_condition))
      (san_move))
    (result_code)))

================================================================================
Disambiguation by rank
================================================================================

[Event "?"]

18. N3f5 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Disambiguation by rank with capture
================================================================================

[Event "?"]

18. N3xf5 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Disambiguation by file
================================================================================

[Event "?"]

18. Nef5 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Disambiguation by file with capture
================================================================================

[Event "?"]

18. Nexf5 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Disambiguation by file and rank
================================================================================

[Event "?"]

18. Ne3f5 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Disambiguation by file and rank with capture
================================================================================

[Event "?"]

18. Ne3xf5 c4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Disambiguation by file and rank with check
================================================================================

[Event "?"]

18. Ne3f5+ Bxf5
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move
        (check_or_mate_condition))
      (san_move))
    (result_code)))

================================================================================
Disambiguation by file and rank with capture and check
================================================================================

[Event "?"]

18. Ne3xf5+ Bxf5
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move
        (check_or_mate_condition))
      (san_move))
    (result_code)))

================================================================================
Null move Z0
================================================================================

[Event "?"]

18. Nf5 c4 19. Z0 c3
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Null or missing move --
================================================================================

[Event "?"]

18. Nf5 c4 19. -- c3
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Mixed sequence
================================================================================

[Event "?"]

1. d4 Nf6 2. c4 e6 3. Nf3 d5 4. Nc3 Bb4 5. Bg5 dxc4 6. e4 c5 7. Bxc4 cxd4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move))
    (result_code)))

================================================================================
Mixed sequence with Unicode piece glyphs
================================================================================

[Event "?"]

1. d4 ♘f6 2. c4 e6 3. ♞f3 d5 4. ♞c3 ♗b4 5. ♝g5 dxc4 6. e4 c5 7. ♝xc4 cxd4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move)
      (move_number)
      (san_move)
      (san_move))
    (result_code)))
